web/base.css
@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");

:root {
  /* All root variables */
  font-family: "Roboto", sans-serif;

  --colour-text: #dde;
  --colour-block: #080808;
  --colour-accent: #2f7cee;
  --colour-accent-trans: #2f7cee0d;
  --colour-highlight: #00000080;

  --colour-mid-grey: #a6acbe;

  --card-shadow: 0 4px 4px rgb(0, 0, 0, 0.25);
  --card-radius: 40px;
  --card-small-radius: 14px;
}

@media print, (prefers-color-scheme: light) {
  :root {
    /* Light Mode Overrides*/
    --colour-text: #000;
    --colour-block: #eee;
    --colour-accent: #2f7cee;
    /* --colour-accent-trans: #2f7cee0d; */
    --colour-highlight: #fff;

    --colour-mid-grey: #a6acbe;
  }
}

body {
  color: var(--colour-text);
  background-color: var(--colour-block);
  margin: 0;
}

header.header {
  background-color: var(--colour-highlight);
  display: flex;
  justify-content: space-between;
}

.header h1 {
  margin: 0.5rem;
}

.mobile-nav-toggle {
  display: inline-block;
  background-color: transparent;
  color: var(--colour-accent);
  border: none;
  font-size: 2rem;
}

@media (min-width: 768px) {
  .mobile-nav-toggle {
    display: none;
  }
}

/* CARDS */

.title-card {
  font-size: 24px;
  margin: 1rem;
}

/* utility class that (should) be able to be re used in a lot of pages) */
.card {
  background-color: var(--colour-highlight);
  color: var(--colour-text);
  box-shadow: var(--card-shadow);
  border-radius: var(--card-radius);
  padding: 1.2rem;
  margin: 1rem 0.5rem;
}

.card a {
  color: var(--colour-text);
  font-weight: 600;
}

.card-title-wrapper {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.card-description {
  font-size: 1.1em;
  line-height: 1.25em;
}

.small-cards-wrapper {
  display: flex;
  flex-wrap: wrap;
  gap: 0.5rem;
  justify-content: center;
}

/* smaller 'sub-cards' */
.card-small {
  width: 100%;
  max-width: 30ch;
  margin: 0.5rem;
  background-color: var(--colour-highlight);
  padding: 1rem;
  border-radius: var(--card-small-radius);
  box-shadow: var(--card-shadow);
}

.title-card-small {
  margin: 0;
}

/* TASKS */
/* <hr> line break between todo items*/
.item-break {
  border: 1px solid var(--colour-text);
}

input[type="checkbox"]:checked + label {
  text-decoration: line-through;
}

/* MODAL <dialog>s */
.modal {
  border: none;
  background-color: var(--colour-highlight);
  color: var(--colour-text);
  box-shadow: var(--card-shadow);
  border-radius: var(--card-radius);
}
.modal::backdrop {
  background: rgba(0, 0, 0, 0.5);
}
.modal-form {
  display: flex;
  flex-direction: column;
  gap: 3rem;
  padding: 1rem;
}

.modal-form :not(label):not(div) {
  border: 2px solid var(--colour-accent);
  border-radius: 0.5rem;
  background-color: var(--colour-block);
  padding: 0.5rem;
}

.modal-form textarea {
  width: 50ch;
  min-height: 10rem;
  padding: 0.6rem 1rem;
  resize: vertical;
}

.input-label {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.end-button {
  display: flex;
  justify-content: flex-end;
}

/* UTILITY */

.bg-accent {
  background-color: var(--colour-accent-trans);
}

.text-center {
  text-align: center;
}

.btn-accent {
  background-color: var(--colour-accent) !important;
}

